--- a/grafana.ini
+++ b/grafana.ini
@@ -9,3 +9,10 @@ user =
 password =
 url = <DATABASE_URL>
 ssl_mode = require
+
+[security]
+allow_embedding = true
+
+[auth.anonymous]
+enabled = true
+
